--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
+  "homepage": "https://faunanoises.github.io"
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
